Closed Bug 1622826 Opened 4 years ago Closed 4 years ago

Intermittent XPC <testname> | application crashed [@ gfxFontInfoLoader::StartLoader(unsigned int, unsigned int)]

Categories

(Core :: Graphics, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox-esr68 --- wontfix
firefox75 --- wontfix
firefox76 --- wontfix
firefox77 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: lsalzman)

References

Details

(Keywords: crash, intermittent-failure)

Crash Data

Attachments

(1 file)

Filed by: btara [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=293309834&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Gm65LEfBSGmEjLf873VuaQ/runs/0/artifacts/public/logs/live_backing.log


[task 2020-03-16T11:54:47.302Z] 11:54:47     INFO -  TEST-START | xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_storage_idb_data_migration.js
[task 2020-03-16T11:54:50.083Z] 11:54:50     INFO -  mozcrash Saved minidump as /Users/cltbld/tasks/task_1584358354/build/blobber_upload_dir/D85168F7-41E8-4036-A483-6C3DDD8222E2.dmp
[task 2020-03-16T11:54:50.085Z] 11:54:50  WARNING -  PROCESS-CRASH | xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_eventpage_warning.js | application crashed [@ gfxFontInfoLoader::StartLoader(unsigned int, unsigned int)]
[task 2020-03-16T11:54:50.085Z] 11:54:50     INFO -  Crash dump filename: /var/folders/qr/dxs4xfkd0p73cxhhmkmhdj5h000017/T/xpc-other-KUQWs7/D85168F7-41E8-4036-A483-6C3DDD8222E2.dmp
[task 2020-03-16T11:54:50.086Z] 11:54:50     INFO -  Operating system: Mac OS X
[task 2020-03-16T11:54:50.086Z] 11:54:50     INFO -                    10.14.5 18F132
[task 2020-03-16T11:54:50.086Z] 11:54:50     INFO -  CPU: amd64
[task 2020-03-16T11:54:50.086Z] 11:54:50     INFO -       family 6 model 69 stepping 1
[task 2020-03-16T11:54:50.086Z] 11:54:50     INFO -       4 CPUs
[task 2020-03-16T11:54:50.087Z] 11:54:50     INFO -  GPU: UNKNOWN
[task 2020-03-16T11:54:50.087Z] 11:54:50     INFO -  Crash reason:  EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
[task 2020-03-16T11:54:50.087Z] 11:54:50     INFO -  Crash address: 0x0
[task 2020-03-16T11:54:50.087Z] 11:54:50     INFO -  Process uptime: 36 seconds
[task 2020-03-16T11:54:50.087Z] 11:54:50     INFO -  Thread 0 (crashed)
[task 2020-03-16T11:54:50.087Z] 11:54:50     INFO -   0  libmozglue.dylib!mozalloc_abort [mozalloc_abort.cpp:01588dd745b055e9a7a6933e88d9b3d52f3b9d98 : 33 + 0x16]
[task 2020-03-16T11:54:50.088Z] 11:54:50     INFO -      rax = 0x000000011675405a   rdx = 0x0000000000000000
[task 2020-03-16T11:54:50.088Z] 11:54:50     INFO -      rcx = 0x0000000116762150   rbx = 0x00007fff989c89a0
[task 2020-03-16T11:54:50.088Z] 11:54:50     INFO -      rsi = 0x00000000000120a8   rdi = 0x00007fff989c8028
[task 2020-03-16T11:54:50.088Z] 11:54:50     INFO -      rbp = 0x00007ffee4054c10   rsp = 0x00007ffee4054c00
[task 2020-03-16T11:54:50.088Z] 11:54:50     INFO -       r8 = 0x00000000000130a8    r9 = 0x00007fff989c8048
[task 2020-03-16T11:54:50.088Z] 11:54:50     INFO -      r10 = 0x0000000000000000   r11 = 0x00007fff989c8040
[task 2020-03-16T11:54:50.089Z] 11:54:50     INFO -      r12 = 0x0000000000000001   r13 = 0x00000001148db0b5
[task 2020-03-16T11:54:50.089Z] 11:54:50     INFO -      r14 = 0x00007ffee4054c60   r15 = 0x00007ffee4057d9e
[task 2020-03-16T11:54:50.089Z] 11:54:50     INFO -      rip = 0x00000001166eb65a
[task 2020-03-16T11:54:50.089Z] 11:54:50     INFO -      Found by: given as instruction pointer in context
[task 2020-03-16T11:54:50.089Z] 11:54:50     INFO -   1  XUL!NS_DebugBreak [nsDebugImpl.cpp:01588dd745b055e9a7a6933e88d9b3d52f3b9d98 : 0 + 0x1d]
[task 2020-03-16T11:54:50.089Z] 11:54:50     INFO -      rbp = 0x00007ffee4055090   rsp = 0x00007ffee4054c20
[task 2020-03-16T11:54:50.090Z] 11:54:50     INFO -      rip = 0x000000010bf018c9
[task 2020-03-16T11:54:50.090Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.090Z] 11:54:50     INFO -   2  XUL!gfxFontInfoLoader::StartLoader(unsigned int, unsigned int) [gfxFontInfoLoader.cpp:01588dd745b055e9a7a6933e88d9b3d52f3b9d98 : 170 + 0x31]
[task 2020-03-16T11:54:50.090Z] 11:54:50     INFO -      rbp = 0x00007ffee40550f0   rsp = 0x00007ffee40550a0
[task 2020-03-16T11:54:50.091Z] 11:54:50     INFO -      rip = 0x000000010d57606d
[task 2020-03-16T11:54:50.091Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.091Z] 11:54:50     INFO -   3  XUL!nsTimerImpl::Fire(int) [nsTimerImpl.cpp:01588dd745b055e9a7a6933e88d9b3d52f3b9d98 : 562 + 0xc]
[task 2020-03-16T11:54:50.091Z] 11:54:50     INFO -      rbp = 0x00007ffee40551a0   rsp = 0x00007ffee4055100
[task 2020-03-16T11:54:50.091Z] 11:54:50     INFO -      rip = 0x000000010c01b7c9
[task 2020-03-16T11:54:50.091Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.092Z] 11:54:50     INFO -   4  XUL!nsTimerEvent::Run() [TimerThread.cpp:01588dd745b055e9a7a6933e88d9b3d52f3b9d98 : 250 + 0x15]
[task 2020-03-16T11:54:50.092Z] 11:54:50     INFO -      rbp = 0x00007ffee40551d0   rsp = 0x00007ffee40551b0
[task 2020-03-16T11:54:50.092Z] 11:54:50     INFO -      rip = 0x000000010c01b3da
[task 2020-03-16T11:54:50.092Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.092Z] 11:54:50     INFO -   5  XUL!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:01588dd745b055e9a7a6933e88d9b3d52f3b9d98 : 1220 + 0x6]
[task 2020-03-16T11:54:50.093Z] 11:54:50     INFO -      rbp = 0x00007ffee4055720   rsp = 0x00007ffee40551e0
[task 2020-03-16T11:54:50.093Z] 11:54:50     INFO -      rip = 0x000000010c0253fb
[task 2020-03-16T11:54:50.093Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.093Z] 11:54:50     INFO -   6  XUL!NS_ProcessPendingEvents(nsIThread*, unsigned int) [nsThreadUtils.cpp:01588dd745b055e9a7a6933e88d9b3d52f3b9d98 : 429 + 0xf]
[task 2020-03-16T11:54:50.093Z] 11:54:50     INFO -      rbp = 0x00007ffee4055770   rsp = 0x00007ffee4055730
[task 2020-03-16T11:54:50.093Z] 11:54:50     INFO -      rip = 0x000000010c0223a6
[task 2020-03-16T11:54:50.093Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.094Z] 11:54:50     INFO -   7  XUL!mozilla::ShutdownXPCOM(nsIServiceManager*) [XPCOMInit.cpp:01588dd745b055e9a7a6933e88d9b3d52f3b9d98 : 646 + 0xe]
[task 2020-03-16T11:54:50.094Z] 11:54:50     INFO -      rbp = 0x00007ffee40557c0   rsp = 0x00007ffee4055780
[task 2020-03-16T11:54:50.094Z] 11:54:50     INFO -      rip = 0x000000010c068089
[task 2020-03-16T11:54:50.094Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.094Z] 11:54:50     INFO -   8  XUL!XRE_TermEmbedding() [nsEmbedFunctions.cpp:01588dd745b055e9a7a6933e88d9b3d52f3b9d98 : 225 + 0x7]
[task 2020-03-16T11:54:50.094Z] 11:54:50     INFO -      rbp = 0x00007ffee40557e0   rsp = 0x00007ffee40557d0
[task 2020-03-16T11:54:50.095Z] 11:54:50     INFO -      rip = 0x0000000111a27538
[task 2020-03-16T11:54:50.095Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.095Z] 11:54:50     INFO -   9  XUL!mozilla::ipc::ScopedXREEmbed::Stop() [ScopedXREEmbed.cpp:01588dd745b055e9a7a6933e88d9b3d52f3b9d98 : 90 + 0x5]
[task 2020-03-16T11:54:50.095Z] 11:54:50     INFO -      rbp = 0x00007ffee4055800   rsp = 0x00007ffee40557f0
[task 2020-03-16T11:54:50.095Z] 11:54:50     INFO -      rip = 0x000000010c7f7193
[task 2020-03-16T11:54:50.095Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.095Z] 11:54:50     INFO -  10  XUL!XRE_InitChildProcess(int, char**, XREChildData const*) [nsEmbedFunctions.cpp:01588dd745b055e9a7a6933e88d9b3d52f3b9d98 : 765 + 0xe]
[task 2020-03-16T11:54:50.096Z] 11:54:50     INFO -      rbp = 0x00007ffee4055b70   rsp = 0x00007ffee4055810
[task 2020-03-16T11:54:50.096Z] 11:54:50     INFO -      rip = 0x0000000111a2834e
[task 2020-03-16T11:54:50.096Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.096Z] 11:54:50     INFO -  11  plugin-container + 0xf0b
[task 2020-03-16T11:54:50.096Z] 11:54:50     INFO -      rbp = 0x00007ffee4055bb0   rsp = 0x00007ffee4055b80
[task 2020-03-16T11:54:50.096Z] 11:54:50     INFO -      rip = 0x000000010bba8f0b
[task 2020-03-16T11:54:50.097Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.097Z] 11:54:50     INFO -  12  libdyld.dylib!start + 0x1
[task 2020-03-16T11:54:50.097Z] 11:54:50     INFO -      rbp = 0x00007ffee4055bc8   rsp = 0x00007ffee4055bc0
[task 2020-03-16T11:54:50.097Z] 11:54:50     INFO -      rip = 0x00007fff620603d5
[task 2020-03-16T11:54:50.098Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.098Z] 11:54:50     INFO -  13  libdyld.dylib!start + 0x1
[task 2020-03-16T11:54:50.098Z] 11:54:50     INFO -      rbp = 0x00007ffee4055bc8   rsp = 0x00007ffee4055bc8
[task 2020-03-16T11:54:50.098Z] 11:54:50     INFO -      rip = 0x00007fff620603d5
[task 2020-03-16T11:54:50.098Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.098Z] 11:54:50     INFO -  Thread 1
[task 2020-03-16T11:54:50.098Z] 11:54:50     INFO -   0  libsystem_kernel.dylib!__workq_kernreturn + 0xa
[task 2020-03-16T11:54:50.098Z] 11:54:50     INFO -      rax = 0x0000000002000170   rdx = 0x0000000000000001
[task 2020-03-16T11:54:50.099Z] 11:54:50     INFO -      rcx = 0x0000700007a89b18   rbx = 0x0000700007a8a000
[task 2020-03-16T11:54:50.099Z] 11:54:50     INFO -      rsi = 0x0000700007a89b80   rdi = 0x0000000000000040
[task 2020-03-16T11:54:50.099Z] 11:54:50     INFO -      rbp = 0x0000700007a89b50   rsp = 0x0000700007a89b18
[task 2020-03-16T11:54:50.099Z] 11:54:50     INFO -       r8 = 0x000000000000000e    r9 = 0x00000000b2d05dd2
[task 2020-03-16T11:54:50.099Z] 11:54:50     INFO -      r10 = 0x0000000000000000   r11 = 0x0000000000000246
[task 2020-03-16T11:54:50.099Z] 11:54:50     INFO -      r12 = 0x00000000001e4008   r13 = 0x0000000003000000
[task 2020-03-16T11:54:50.099Z] 11:54:50     INFO -      r14 = 0x0000700007a8a098   r15 = 0x0000700007a8a0a0
[task 2020-03-16T11:54:50.100Z] 11:54:50     INFO -      rip = 0x00007fff62196bfe
[task 2020-03-16T11:54:50.100Z] 11:54:50     INFO -      Found by: given as instruction pointer in context
[task 2020-03-16T11:54:50.100Z] 11:54:50     INFO -   1  libsystem_pthread.dylib!start_wqthread + 0xd
[task 2020-03-16T11:54:50.100Z] 11:54:50     INFO -      rbp = 0x0000700007a89b78   rsp = 0x0000700007a89b60
[task 2020-03-16T11:54:50.100Z] 11:54:50     INFO -      rip = 0x00007fff622533fd
[task 2020-03-16T11:54:50.100Z] 11:54:50     INFO -      Found by: previous frame's frame pointer
[task 2020-03-16T11:54:50.101Z] 11:54:50     INFO -   2  LaunchServices!___log_block_invoke + 0x523d
[task 2020-03-16T11:54:50.101Z] 11:54:50     INFO -      rsp = 0x0000700007a89be0   rip = 0x00007fff3785a5e2
[task 2020-03-16T11:54:50.102Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.102Z] 11:54:50     INFO -   3  libobjc.A.dylib!lookUpImpOrForward + 0x457
[task 2020-03-16T11:54:50.103Z] 11:54:50     INFO -      rsp = 0x0000700007a89bf0   rip = 0x00007fff60885a03
[task 2020-03-16T11:54:50.103Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.103Z] 11:54:50     INFO -   4  libobjc.A.dylib!cache_getImp + 0x90
[task 2020-03-16T11:54:50.103Z] 11:54:50     INFO -      rsp = 0x0000700007a89c38   rip = 0x00007fff60884680
[task 2020-03-16T11:54:50.103Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.103Z] 11:54:50     INFO -   5  AppKit!GCC_except_table7 + 0x9b50
[task 2020-03-16T11:54:50.104Z] 11:54:50     INFO -      rsp = 0x0000700007a89c40   rip = 0x00007fff3434823c
[task 2020-03-16T11:54:50.104Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.104Z] 11:54:50     INFO -   6  libobjc.A.dylib!_objc_msgSend_uncached + 0x44
[task 2020-03-16T11:54:50.104Z] 11:54:50     INFO -      rsp = 0x0000700007a89c50   rip = 0x00007fff60885114
[task 2020-03-16T11:54:50.104Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.104Z] 11:54:50     INFO -   7  LaunchServices!___log_block_invoke + 0x523d
[task 2020-03-16T11:54:50.105Z] 11:54:50     INFO -      rsp = 0x0000700007a89c78   rip = 0x00007fff3785a5e2
[task 2020-03-16T11:54:50.105Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.105Z] 11:54:50     INFO -   8  libmozglue.dylib!arena_t::DallocSmall(arena_chunk_t*, void*, arena_chunk_map_t*) [mozjemalloc.cpp:01588dd745b055e9a7a6933e88d9b3d52f3b9d98 : 3311 + 0x10]
[task 2020-03-16T11:54:50.105Z] 11:54:50     INFO -      rsp = 0x0000700007a89c90   rip = 0x00000001166d01b8
[task 2020-03-16T11:54:50.105Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.105Z] 11:54:50     INFO -   9  LaunchServices!___ZN14_LSPreferences4loadEv_block_invoke + 0x51
[task 2020-03-16T11:54:50.106Z] 11:54:50     INFO -      rsp = 0x0000700007a89d20   rip = 0x00007fff3776e140
[task 2020-03-16T11:54:50.106Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.106Z] 11:54:50     INFO -  10  libdispatch.dylib!_dispatch_block_async_invoke2 + 0x72
[task 2020-03-16T11:54:50.106Z] 11:54:50     INFO -      rsp = 0x0000700007a89d60   rip = 0x00007fff6201ed09
[task 2020-03-16T11:54:50.106Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.107Z] 11:54:50     INFO -  11  libdispatch.dylib!_dispatch_lane_concurrent_drain + 0x413
[task 2020-03-16T11:54:50.107Z] 11:54:50     INFO -      rsp = 0x0000700007a89db0   rip = 0x00007fff62020402
[task 2020-03-16T11:54:50.107Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.107Z] 11:54:50     INFO -  12  libdispatch.dylib!_dispatch_lane_invoke + 0x505
[task 2020-03-16T11:54:50.107Z] 11:54:50     INFO -      rsp = 0x0000700007a89e50   rip = 0x00007fff6201a71a
[task 2020-03-16T11:54:50.107Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.108Z] 11:54:50     INFO -  13  libdispatch.dylib!_dispatch_queue_override_invoke + 0x1a5
[task 2020-03-16T11:54:50.108Z] 11:54:50     INFO -      rsp = 0x0000700007a89ec0   rip = 0x00007fff620158fd
[task 2020-03-16T11:54:50.108Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.108Z] 11:54:50     INFO -  14  libdispatch.dylib!_dispatch_last_resort_autorelease_pool_pop + 0x1b
[task 2020-03-16T11:54:50.108Z] 11:54:50     INFO -      rsp = 0x0000700007a89f00   rip = 0x00007fff62013626
[task 2020-03-16T11:54:50.108Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.109Z] 11:54:50     INFO -  15  libdispatch.dylib!_dispatch_root_queue_drain + 0x479
[task 2020-03-16T11:54:50.109Z] 11:54:50     INFO -      rsp = 0x0000700007a89f20   rip = 0x00007fff620216f1
[task 2020-03-16T11:54:50.109Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.109Z] 11:54:50     INFO -  16  libdispatch.dylib!_dispatch_worker_thread2 + 0x5a
[task 2020-03-16T11:54:50.109Z] 11:54:50     INFO -      rsp = 0x0000700007a89f90   rip = 0x00007fff62021b46
[task 2020-03-16T11:54:50.109Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.110Z] 11:54:50     INFO -  17  libsystem_pthread.dylib!_pthread_wqthread + 0x27a
[task 2020-03-16T11:54:50.110Z] 11:54:50     INFO -      rsp = 0x0000700007a89fa0   rip = 0x00007fff622536e6
[task 2020-03-16T11:54:50.110Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.110Z] 11:54:50     INFO -  18  libsystem_pthread.dylib!start_wqthread + 0xd
[task 2020-03-16T11:54:50.110Z] 11:54:50     INFO -      rsp = 0x0000700007a89fe0   rip = 0x00007fff622533fd
[task 2020-03-16T11:54:50.110Z] 11:54:50     INFO -      Found by: stack scanning
[task 2020-03-16T11:54:50.110Z] 11:54:50     INFO -  19  libdispatch.dylib!_dispatch_worker_thread2 + 0xa9
[task 2020-03-16T11:54:50.111Z] 11:54:50     INFO -      rsp = 0x0000700007a8a090   rip = 0x00007fff62021b95
[task 2020-03-16T11:54:50.111Z] 11:54:50     INFO -      Found by: stack scanning
...
See Also: → 1565457
Summary: Intermittent toolkit/components/extensions/test/xpcshell/test_ext_eventpage_warning.js | application crashed [@ gfxFontInfoLoader::StartLoader(unsigned int, unsigned int)] → Intermittent toolkit/components/extensions/test/xpcshell/test_ext_eventpage_warning.js | toolkit/components/extensions/test/xpcshell/<testname.js> | application crashed [@ gfxFontInfoLoader::StartLoader(unsigned int, unsigned int)]
Summary: Intermittent toolkit/components/extensions/test/xpcshell/test_ext_eventpage_warning.js | toolkit/components/extensions/test/xpcshell/<testname.js> | application crashed [@ gfxFontInfoLoader::StartLoader(unsigned int, unsigned int)] → Intermittent XPC <testname> | application crashed [@ gfxFontInfoLoader::StartLoader(unsigned int, unsigned int)]

The priority flag is not set for this bug.
:mixedpuppy, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(mixedpuppy)
Component: General → Graphics
Flags: needinfo?(mixedpuppy)
Product: WebExtensions → Core

The priority flag is not set for this bug.
:jbonisteel, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jbonisteel)

Lee - not sure if gfxFontInfoLoader is something you know about - does this crash look actionable?

Flags: needinfo?(jbonisteel) → needinfo?(lsalzman)
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Crash Signature: [@ gfxFontInfoLoader::StartLoader(unsigned int, unsigned int)] → [@ gfxFontInfoLoader::StartLoader(unsigned int, unsigned int)] [@ gfxFontInfoLoader::FinalizeLoader(FontInfoData*) ]
Flags: needinfo?(lsalzman)
See Also: → 1508626

The priority flag is not set for this bug.
:jbonisteel, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jbonisteel)
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/34f137d67233
stop gfxFontInfoLoader on xpcom-shutdown. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
See Also: → 1516827
Flags: needinfo?(jbonisteel)
Priority: -- → P3
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: