Bug 1622826 - stop gfxFontInfoLoader on xpcom-shutdown. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D71684